# variant-forge

./: .gitignore  .gitleaksignore  .mise.audit.toml  .mise.ci.toml  .mise.docs.toml  .mise.release.toml  .mise.test.toml  .pre-commit-config.yaml  .releaserc.yaml  .rustfmt.toml  .vale.ini  .yamlfmt  .yamllint.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  REUSE.toml  SECURITY.md  about.toml  bacon.toml  build.rs  deny.toml  licenses_report.json  licenses_report.md  mise.toml  nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yaml  build_container.yaml  ci.yaml  code_coverage.yaml  dependency-review.yaml  dependency-review.yaml.yaml  dependency_review.yaml  deploy_mdbook.yaml  get_next_version.yaml  release.yaml  scorecard.yaml  shuttle_deploy.yaml
.mise/tasks/: audit.sh  build-release.sh  build.sh  clean.sh  deploy_to_vercel.sh  format-check.sh  format.sh  get-next-version.sh  lint.sh  test.sh
.mise/tasks/utils/: fix-lockfile.sh  generate-about.sh
LICENSES/: CC-BY-SA-4.0.txt
data/: amino_acids.csv  amino_acids_filtered.json  amino_acids_full.json  dataset_document.xlsx
data/docs/: epstein.md  exchangability.md  grantham.md  miyata.md  sneath.md
data/processed/: epstein.csv  exchangability.csv  miyata.csv  sneath.csv
data/wikitables/: README.md  epstein.txt  exvhangability.txt  grantham.txt  miyata.txt  sneath.txt
guide/: book.toml
meta/: licenses.hbs
meta/vale-styles/config/vocabularies/Custom/: accept.txt
scripts/: build.sh  generate_about_json.sh  generate_about_md.sh  get_amino_acid_names.sh
src/variant_forge/: cli.rs  main.rs
src/variant_forge_lib/: lib.rs
src/variant_forge_lib/datasets/: epstein.rs  exchangability.rs  grantham.rs  miyata.rs  mod.rs  sneath.rs
src/variant_forge_lib/models/: amino_acid.rs  distance.rs  mod.rs  registry.rs
src/variant_forge_lib/utils/: mod.rs  router.rs
